# video-rl

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: __init__.py  build_rl_parquet.py  build_sft_parquet.py  enrich_instance.py  schema.py  trajectory_expand.py  trajectory_io.py
example_data/: sample_manifest.jsonl  sample_trajectories.jsonl
swe_rl_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_enrich_and_reward.py  test_trajectory_expand.py
train/: VERSIONS.txt  __init__.py
train/scripts/: run_grpo_swe.sh  run_lora_sft_swe.sh
train/tools/: __init__.py  example_reward_stub.sh  merge_peft_adapter.py  reward_swe.py
